tests/paczka2/big_fuzzy/52440175.err
Error in line 1: 7UPys S97 31,6
Error in line 15: lBheZu8z S810 4,3
Error in line 13: WDkm S97 89,3
Error in line 20: lBheZu8z S765 39,3
Error in line 22: WDkm S810 44,8
Error in line 33: 7UPys S97 56,0
Error in line 39: 7UPys S810 60,7
Error in line 40: uBy A266 22,9
Error in line 50: S765 S765 54,3
Error in line 55: I835 S97 -1,8
Error in line 56: K1k6f S97 95,0
Error in line 45: I835 S97 4,5
Error in line 81: lBheZu8z S97 17,1
Error in line 94: K1k6f S810 97,63
Error in line 92: WDkm S97 21,4
Error in line 101: lBheZu8z S97 17,0
Error in line 102: lBheZu8z S765 3,1
Error in line 96: K1k6f S810 124,5
Error in line 104: K1k6f S765 54,0
Error in line 119: K1k6f S97 301,9
Error in line 130: I835 S810 -1,9
Error in line 126: I835 S810 4,5
Error in line 147: K1k6f S97 65,0
Error in line 163: 7UPys S810 14,5
Error in line 164: 7UPys S97 46,4
Error in line 161: WDkm S810 37,7
Error in line 172: lBheZu8z S810 73,7
Error in line 184: K1k6f S765 57,5
Error in line 183: WDkm S810 54,2
Error in line 188: WDkm A266 16,8
Error in line 200: 7UPys S97 21,7
Error in line 202: I835 A266 98,9
Error in line 210: I835 S765 4,1
Error in line 216: 7UPys S810 46,3
Error in line 215: K1k6f S810 41,1
Error in line 209: WDkm S810 26,4
Error in line 239: uBy S765 d7,6
Error in line 230: 7UPys A266 97,1
Error in line 243: S765 S97 -2,0
Error in line 241: 7UPys S765 50,3
Error in line 249: lBheZu8z A266 3,8
